# simple_calculator

./: README.md  pyproject.toml
src/calculator/: calculator.py
tests/: test_calculator.py
