[tool.poetry]
name = "simple-calculator"
version = "0.1.0"
description = "Simple calcuulator example to be used with unit testing"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "src/calculator", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
pytest-mock = "^3.12.0"
mock = "^5.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
