[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "calculator"
version = "0.1.0"
description = "Simple calcuulator example to be used with unit testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
    "mock>=5.2.0",
    "pytest>=9.0.2",
    "coverage>=7.13.5",
]
